--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ android:
     - build-tools-23.0.2
 # The SDK version used to compile your project
     - android-23    
+    - extra-android-m2repository
 
 # A peculiarity of dependency caching in Gradle means that 
 # to avoid uploading the cache after every build you need 
