--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,14 @@ language: android
 android:
   components:
 # The BuildTools version used by your project
-    - tools
+    - platform-tools
     - build-tools-23.0.2
 # The SDK version used to compile your project
     - android-23    
     - extra-android-m2repository
+
+script:
+   - ./gradlew build connectedCheck
 
 # A peculiarity of dependency caching in Gradle means that 
 # to avoid uploading the cache after every build you need 
