--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,14 @@
 language: android
+jdk: oraclejdk7
 
 android:
   components:
 # The BuildTools version used by your project
-    - platform-tools
+    - tools
     - build-tools-23.0.2
 # The SDK version used to compile your project
     - android-23    
     - extra-android-m2repository
-
-script:
-   - ./gradlew build connectedCheck
 
 # A peculiarity of dependency caching in Gradle means that 
 # to avoid uploading the cache after every build you need 
