--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,52 @@
+sudo: false
 language: android
 jdk: oraclejdk7
-
-android:
-  components:
-# The BuildTools version used by your project
-    - tools
-    - build-tools-23.0.2
-# The SDK version used to compile your project
-    - android-23    
-    - extra-android-m2repository
-
-# A peculiarity of dependency caching in Gradle means that 
-# to avoid uploading the cache after every build you need 
-#to add the following lines
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
 cache:
   directories:
+    - node_modules
     - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
+
+android:
+  components:
+    - platform-tools
+    - tools
+    
+    # The BuildTools version used by your project
+    - build-tools-23.0.2
+
+    # The SDK version used to compile your project
+    - android-23
+
+    # Additional components
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+
+    # Specify at least one system image,
+    # if you need to run emulator(s) during your tests
+    # - sys-img-armeabi-v7a-android-21
+    - sys-img-armeabi-v7a-android-23
+
+  licenses:
+    - 'android-sdk-license-.+'
+
+env:
+  global:
+    # install timeout in minutes (2 minutes by default)
+    - ADB_INSTALL_TIMEOUT=8
+
+
+# Emulator Management: Create, Start and Wait
+before_script:
+  - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window -gpu off -no-boot-anim &
+  - android-wait-for-emulator
+  - adb devices
+  - adb shell input keyevent 82 &
+
+script:
+  - echo $ADB_INSTALL_TIMEOUT
+  - android list target
+  - ./gradlew connectedAndroidTest
