--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: false
 language: android
 jdk: oraclejdk7
 before_cache:
@@ -14,7 +13,7 @@ android:
     - tools
     
     # The BuildTools version used by your project
-    - build-tools-23.0.2
+    - build-tools-23.0.1
 
     # The SDK version used to compile your project
     - android-23
@@ -27,7 +26,7 @@ android:
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
     # - sys-img-armeabi-v7a-android-21
-    - sys-img-armeabi-v7a-android-23
+    # - sys-img-armeabi-v7a-android-23
 
   licenses:
     - 'android-sdk-license-.+'
@@ -39,12 +38,12 @@ env:
 
 
 # Emulator Management: Create, Start and Wait
-before_script:
-  - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window -gpu off -no-boot-anim &
-  - android-wait-for-emulator
-  - adb devices
-  - adb shell input keyevent 82 &
+#before_script:
+#  - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
+#  - emulator -avd test -no-skin -no-audio -no-window -gpu off -no-boot-anim &
+#  - android-wait-for-emulator
+#  - adb devices
+#  - adb shell input keyevent 82 &
 
 script:
   - echo $ADB_INSTALL_TIMEOUT
