--- a/.travis.yml
+++ b/.travis.yml
@@ -1,50 +1,20 @@
 language: android
 jdk: oraclejdk7
-before_cache:
-  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
-cache:
-  directories:
-    - node_modules
-    - $HOME/.gradle/caches/
-
-android:
-  components:
-    - tools
-    
-    # The BuildTools version used by your project
-    - build-tools-23.0.2
-
-    # The SDK version used to compile your project
-    - android-23
-
-    # Additional components
-    #- extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    # - sys-img-armeabi-v7a-android-21
-    # - sys-img-armeabi-v7a-android-23
-
-  licenses:
-    - 'android-sdk-license-.+'
-
 env:
   global:
-    # install timeout in minutes (2 minutes by default)
-    - ADB_INSTALL_TIMEOUT=8
+    - TERM=dumb
+  matrix:
+    - ANDROID_TARGET=android-23 ANDROID_ABI=armeabi-v7a
+
+sdk_components:
+  - build-tools-23.0.2
 
 
-# Emulator Management: Create, Start and Wait
-#before_script:
-#  - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
-#  - emulator -avd test -no-skin -no-audio -no-window -gpu off -no-boot-anim &
-#  - android-wait-for-emulator
-#  - adb devices
-#  - adb shell input keyevent 82 &
+before_script:
+  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - adb wait-for-device
+  - adb shell input keyevent 82 &
 
-script:
-  - echo $ADB_INSTALL_TIMEOUT
-  - android list target
-  - ./gradlew connectedAndroidTest
+
+script: ./gradlew build connectedAndroidTest
