--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ env:
     - ANDROID_TARGET=android-23 ANDROID_ABI=armeabi-v7a
 
 sdk_components:
-  - build-tools-23.0.2
+  - build-tools-23.0.1
+  - android-23
 
 
 before_script:
