--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,22 @@
 language: android
+jdk: oraclejdk7
+
 env:
   global:
-    - TERM=dumb
-  matrix:
-    - ANDROID_TARGET=android-23 ANDROID_ABI=armeabi-v7a
-
-sdk_components:
-  - build-tools-23.0.1
+    - ANDROID_TARGET=android-23
+    - ANDROID_ABI=armeabi-v7a
+android:
+  components:
+  - tools
+  - platform-tools
+  - build-tools-23.0.2
   - android-23
-
-
-before_script:
+  - extra-android-m2repository
+  - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}
+script:
+  - ./gradlew build jacocoTestReport assembleAndroidTest
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
-  - adb wait-for-device
-  - adb shell input keyevent 82 &
-
-
-script: ./gradlew build connectedAndroidTest
+  - android-wait-for-emulator
+  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
+  - ./gradlew connectedCheck
