--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.1"
 
     lintOptions {
         abortOnError false
@@ -17,7 +17,14 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            /**
+             * This automatically removes resources that are unused from the packaged application.In addition to removing resources
+             * in your project that are not actually needed at runtime, this also removes resources from libraries you are depending
+             * on if they are not actually needed by your application. This can hugely reduce the size of your application.
+             */
+            minifyEnabled true
+            shrinkResources true
+
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
