--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     lintOptions {
-        abortOnError false
+        abortOnError true
     }
 
     defaultConfig {
