--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: android
+script: gradle test
 jdk: oraclejdk7
 android:
   components:
@@ -14,7 +15,7 @@ android:
     - android-23
 
     # Additional components
-    - extra-google-google_play_services
+    #- extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
     - addon-google_apis-google-23
